--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-11  John C Barstow  <jbowtie@amathaine.com>
+
+	* mi.po: Updated Māori translation.
+
 2004-04-09  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
