--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-11  Žygimantas Beručka  <uid0@akl.lt>
+
+	* lt.po: Updated Lithuanian translation by Mantas Kriaučiūnas.
+
 2004-04-11  John C Barstow  <jbowtie@amathaine.com>
 
 	* mi.po: Updated Māori translation.
