--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-12  Dave Camp  <dave@ximian.com>
+
+	* libnautilus-private/nautilus-icon-dnd.c:
+	(selection_is_image_file): Allow SVG files when dealing with 
+	backgrounds.  Patch from Benjamin Keil.
+
 2004-04-09  Dave Camp  <dave@ximian.com>
 
 	* libnautilus-private/nautilus-directory-background.c:
