Added bonobo server file stuff to CLEANFILES. Patch from Steve Chaplin
2004-04-12  Dave Camp  <dave@ximian.com>

	* components/emblem/Makefile.am: Added bonobo server file
	stuff to CLEANFILES.  Patch from Steve Chaplin
	<stevech1097@yahoo.com.au>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-04-12  Dave Camp  <dave@ximian.com>
 
+	* components/emblem/Makefile.am: Added bonobo server file
+	stuff to CLEANFILES.  Patch from Steve Chaplin
+	<stevech1097@yahoo.com.au>
+
+2004-04-12  Dave Camp  <dave@ximian.com>
+
 	* libnautilus-private/nautilus-icon-dnd.c:
 	(selection_is_image_file): Allow SVG files when dealing with 
 	backgrounds.  Patch from Benjamin Keil.
