--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-22 19:48-0500\n"
-"PO-Revision-Date: 2004-04-08 19:51-0400\n"
+"POT-Creation-Date: 2004-04-08 19:57-0400\n"
+"PO-Revision-Date: 2004-04-12 22:20-0400\n"
 "Last-Translator: Gareth Owen <gowen72@yahoo.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -5542,7 +5542,7 @@ msgstr "Can't Launch CD Burner"
 #. FIXME: We don't use spaces to pad labels!
 #: src/nautilus-information-panel.c:1039
 msgid "Empty _Trash"
-msgstr "Empty _Trash"
+msgstr "Empty _Wastebasket"
 
 #. FIXME: We don't use spaces to pad labels!
 #: src/nautilus-information-panel.c:1055
@@ -5841,7 +5841,7 @@ msgstr "_Templates"
 #: src/nautilus-navigation-window-ui.xml.h:39
 #: src/nautilus-spatial-window-ui.xml.h:16
 msgid "_Trash"
-msgstr "_Trash"
+msgstr "_Wastebasket"
 
 #: src/nautilus-navigation-window-ui.xml.h:40
 msgid "_Up"
