Don't unref the icon when it is NULL
2004-04-14  Soeren Sandmann Pedersen  <ssp@localhost.localdomain>

	* src/file-manager/fm-list-model.c (fm_list_model_get_value):
	Don't unref the icon when it is NULL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-14  Soeren Sandmann Pedersen  <ssp@localhost.localdomain>
+
+	* src/file-manager/fm-list-model.c (fm_list_model_get_value):
+	Don't unref the icon when it is NULL
+
 2004-04-12  Dave Camp  <dave@ximian.com>
 
 	* components/emblem/Makefile.am: Added bonobo server file
