Fix up kde trash hack to look in global config also.
2004-04-14  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-application.c (initialize_kde_trash_hack):
	Fix up kde trash hack to look in global config also.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-14  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-application.c (initialize_kde_trash_hack):
+	Fix up kde trash hack to look in global config also.
+
 2004-04-14  Soeren Sandmann Pedersen  <ssp@localhost.localdomain>
 
 	* src/file-manager/fm-list-model.c (fm_list_model_get_value):
