Make shift/middle click close window behind (#137663).
2004-04-14  Martin Wehner  <martin.wehner@epost.de>

	* src/nautilus-spatial-window.c (location_menu_item_activated_callback):
	* src/nautilus-window-manage-views.[ch] (nautilus_window_open_location):
	* src/nautilus-window.c (nautilus_window_go_to):
        Make shift/middle click close window behind (#137663).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-14  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/nautilus-spatial-window.c (location_menu_item_activated_callback):
+	* src/nautilus-window-manage-views.[ch] (nautilus_window_open_location):
+	* src/nautilus-window.c (nautilus_window_go_to):
+        Make shift/middle click close window behind (#137663).
+
 2004-04-14  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-application.c (initialize_kde_trash_hack):
