--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-15  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-04-12  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English translation
