--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-19  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS: 
+	Update for 2.6.1
+
 2004-04-16  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-list-view.c (key_press_callback):
