--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,19 @@
-This is nautilus 2.6.0, the file manager for the Gnome 2 desktop.
+This is nautilus 2.6.1, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.6.0 are:
+* Fix various crashes and leaks
+* Use correct icon for filesystem in treeview
+* Place unplaced windows over the parent window
+* Fix non-ascii typeahead
+* Faster property dialog for operations on many files
+* Faster list view
+* Fill open location dialog with initial path
+* Add down arrow to location button
+* Make shift close window behind in more places
+* Allow smaller spatial windows
+* Allow svg backgrounds
+* Fix ignore kde trash directory hack
+* By default set per-folder background in spatial mode
 
 Major changes since 2.5.91 are:
 * Translation updates
