Replaced %-d with %e and %-I with %l. `-' modifier is a GNU extension.
2004-04-21  Changwoo Ryu  <cwryu@debian.org>

	* ko.po: Replaced %-d with %e and %-I with %l. `-' modifier is a
	GNU extension.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-21  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Replaced %-d with %e and %-I with %l. `-' modifier is a
+	GNU extension.
+
 === nautilus 2.6.1 ===
 
 2004-04-19  Žygimantas Beručka  <uid0@akl.lt>
