Updated French translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-21  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2004-04-21  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Replaced %-d with %e and %-I with %l. `-' modifier is a
