--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-22  Martin Wehner  <martin.wehner@epost.de>
+
+	* libnautilus-private/nautilus-icon-factory.c (cache_icon_unref):
+	Don't leak display_name.
+
 2004-04-20  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* libnautilus-private/nautilus-icon-container.c 
