--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-23  Gil Osher  <dolfin@rpg.org.il>
+
+	* he.po: Updated Hebrew translation.
+
 2004-04-21  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
@@ -9,11 +13,11 @@
 
 === nautilus 2.6.1 ===
 
-2004-04-19  ≈Ωygimantas Beruƒçka  <uid0@akl.lt>
+2004-04-19  ?Ωygimantas Beru?çka  <uid0@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
 
-2004-04-16  I√±aki Larra√±aga  <dooteo@euskalgnu.org>
+2004-04-16  I?±aki Larra?±aga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translatiion.
 
@@ -25,13 +29,13 @@
 
 	* en_GB.po: Updated British English translation
 
-2004-04-11  ≈Ωygimantas Beruƒçka  <uid0@akl.lt>
+2004-04-11  ?Ωygimantas Beru?çka  <uid0@akl.lt>
 
-	* lt.po: Updated Lithuanian translation by Mantas Kriauƒçi≈´nas.
+	* lt.po: Updated Lithuanian translation by Mantas Kriau?çi?´nas.
 
 2004-04-11  John C Barstow  <jbowtie@amathaine.com>
 
-	* mi.po: Updated MƒÅori translation.
+	* mi.po: Updated M?Åori translation.
 
 2004-04-09  Adam Weinberger  <adamw@gnome.org>
 
@@ -54,10 +58,10 @@
 
 	* fr.po: Updated French translation.
 
-2004-04-03  Sam√∫el J√≥n Gunnarsson  <sammi@techattack.nu>
+2004-04-03  Sam?∫el J?≥n Gunnarsson  <sammi@techattack.nu>
 
 	* is.po: Updated Icelandic translation by 
-	Helgi √ûormar √ûorbj√∂rnsson  <helgi@trance.is>
+	Helgi ?ûormar ?ûorbj?∂rnsson  <helgi@trance.is>
 
 2004-04-02  Gareth Owen  <gowen72@yahoo.com>
 
@@ -109,7 +113,7 @@
 
 	* el.po: Updated  Greek translation.
 
-2004-03-23  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2004-03-23  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -249,9 +253,9 @@
 
 	* mn.po: Updated Mongolian translation.
 
-2004-03-09  Danilo ≈†egan  <dsegan@gmx.net>
+2004-03-09  Danilo ?†egan  <dsegan@gmx.net>
 
-	* sr.po, sr@Latn.po: Fixed typos noticed by Bojan Suziƒá.
+	* sr.po, sr@Latn.po: Fixed typos noticed by Bojan Suzi?á.
 
 2004-03-09  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
@@ -261,9 +265,9 @@
 
 	* ga.po: Updated Irish translation.
 
-2004-03-08  Danilo ≈†egan  <dsegan@gmx.net>
+2004-03-08  Danilo ?†egan  <dsegan@gmx.net>
 
-	* sr@ije.po: Added Serbian Jekavian translation by Bojan Suziƒá 
+	* sr@ije.po: Added Serbian Jekavian translation by Bojan Suzi?á 
 	<bojans@teol.net>.
 
 === nautilus 2.5.90 ===
@@ -281,7 +285,7 @@
 
 	* fi.po: Improve Finnish translation.
 
-2004-03-06  M…ôtin ∆èmirov  <metin@karegen.com>
+2004-03-06  M?ôtin ?èmirov  <metin@karegen.com>
 
 	* az.po: Translation updated.
 
@@ -390,7 +394,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2004-02-25  Danilo ≈†egan  <dsegan@gmx.net>
+2004-02-25  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -440,7 +444,7 @@
 
 	* cs.po: Updated Czech translation.
 
-2004-02-24  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2004-02-24  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian nynorsk translation.
 
@@ -472,7 +476,7 @@
 
 	* da.po: Updated Danish translation.
 
-2004-02-23  Danilo ≈†egan  <dsegan@gmx.net>
+2004-02-23  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Fix accelerator clash and a typo.
 	
@@ -488,11 +492,11 @@
 
 	* el.po: Updated Greek translation.
 
-2004-02-22  M…ôtin ∆èmirov  <metin@karegen.com>
+2004-02-22  M?ôtin ?èmirov  <metin@karegen.com>
 
 	* az.po: Updated Azerbaijani translation.
 
-2004-02-22  Danilo ≈†egan  <dsegan@gmx.net>
+2004-02-22  Danilo ?†egan  <dsegan@gmx.net>
 
 	* srr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -574,7 +578,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2004-02-15  M…ôtin ∆èmirov  <metin@karegen.com>
+2004-02-15  M?ôtin ?èmirov  <metin@karegen.com>
 
 	* az.po: Translation updated.
 
@@ -594,7 +598,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2004-02-12  Danilo ≈†egan  <dsegan@gmx.net>
+2004-02-12  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -685,11 +689,11 @@
 
 	* da.po: Updated Danish translation.
 
-2004-02-01  Danilo ≈†egan  <dsegan@gmx.net>
+2004-02-01  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
-2004-01-31 M…ôtin ∆èmirov <metin@karegen.com>
+2004-01-31 M?ôtin ?èmirov <metin@karegen.com>
 
 	* az.po: Updated Azerbaijani translation.
 
@@ -728,7 +732,7 @@
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
 
-2004-01-27  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2004-01-27  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -764,7 +768,7 @@
 
 	* cs.po: Updated Czech translation.
 
-2004-01-23  Danilo ≈†egan  <dsegan@gmx.net>
+2004-01-23  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -795,7 +799,7 @@
 
 2004-01-20  Dafydd Harries  <daf@muse.19inch.net>
 
-	* cy.po: Fixes, notably s/symyd/symud/; s/copio/cop√Øo/.
+	* cy.po: Fixes, notably s/symyd/symud/; s/copio/cop?Øo/.
 
 2004-01-18 Hasbullah Bin Pit <sebol@my-penguin.org>
 
@@ -805,10 +809,10 @@
 
 	* no.po: Updated Norwegian translation.
 
-2004-01-17  ≈Ωygimantas Beruƒçka  <uid0@tuxfamily.org>
+2004-01-17  ?Ωygimantas Beru?çka  <uid0@tuxfamily.org>
 
 	* lt.po: Updated Lithuanian translation by Mantas
-	Kriauƒçi≈´nas.
+	Kriau?çi?´nas.
 
 2004-01-17  Christophe Merlet  <redfox@redfoxcenter.org>
 
@@ -859,13 +863,13 @@
 
 	* nl.po: Translation updated by Reinout van Schouwen.
 
-2004-01-13  Danilo ≈†egan  <dsegan@gmx.net>
+2004-01-13  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
 === nautilus 2.5.5 ===
 
-2004-01-13  Danilo ≈†egan  <dsegan@gmx.net>
+2004-01-13  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -899,7 +903,7 @@
 
 	* ko.po: Updated Korean translation.
 
-2004-01-10  Danilo ≈†egan  <dsegan@gmx.net>
+2004-01-10  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -932,7 +936,7 @@
 
 	* cs.po: Updated Czech translation.
 
-2004-01-05  Danilo ≈†egan  <dsegan@gmx.net>
+2004-01-05  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -958,13 +962,13 @@
 
 	* da.po: Partial update of Danish translation.
 
-2004-01-01  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2004-01-01  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
 === nautilus 2.5.4 ===
 
-2003-12-29  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2003-12-29  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -972,11 +976,11 @@
 
 	* ms.po: Updated Malay translation. 
 
-2003-12-27  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2003-12-27  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
-2003-12-23  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2003-12-23  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -993,11 +997,11 @@
 
 	* ja.po: Updated Japanese translation.
 
-2003-12-17  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2003-12-17  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
-2003-12-16  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2003-12-16  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -1025,7 +1029,7 @@
 
 	* es.po: Updated Spanish translation.
 
-2003-12-14  Danilo ≈†egan  <dsegan@gmx.net>
+2003-12-14  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1041,10 +1045,10 @@
 
 	* es.po: Updated Spanish translation
 
-2003-12-10  √Ösmund Skj√¶veland  <aasmunds@fys.uio.no>
+2003-12-10  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
-	* no.po: Corrected some errors in Norwegian Bokm√•l translation.
+	* no.po: Corrected some errors in Norwegian Bokm?•l translation.
 
 2003-12-09   Vincent van Adrighem  <adrighem@gnome.org>
 
@@ -1072,7 +1076,7 @@
 
 	* mn.po: Updated Mongolian translation. 
 
-2003-12-03  Danilo ≈†egan  <dsegan@gmx.net>
+2003-12-03  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1080,7 +1084,7 @@
 
 	* no.po: Update Norwegian translation.
 
-2003-11-27  Danilo ≈†egan  <dsegan@gmx.net>
+2003-11-27  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbain translation.
 
@@ -1095,7 +1099,7 @@
 
 	* POTFILES.in: add fm-icon-container.c
 
-2003-11-20  Danilo ≈†egan  <dsegan@gmx.net>
+2003-11-20  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1109,7 +1113,7 @@
 
 	* da.po: Updated Danish translation.
 
-2003-11-10  Danilo ≈†egan  <dsegan@gmx.net>
+2003-11-10  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1156,11 +1160,11 @@
 
 	* hu.po: Updated Hungarian translation.
 
-2003-10-17  Danilo ≈†egan  <dsegan@gmx.net>
+2003-10-17  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
-2003-10-15  Danilo ≈†egan  <dsegan@gmx.net>
+2003-10-15  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1171,7 +1175,7 @@
 
 	* hu.po: Updated Hungarian translation.
 
-2003-10-08  Danilo ≈†egan  <dsegan@gmx.net>
+2003-10-08  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1183,11 +1187,11 @@
 
 	* ro.po: Updated Romanian translation
 
-2003-10-06  Danilo ≈†egan  <dsegan@gmx.net>
+2003-10-06  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
-2003-10-06  Danilo ≈†egan  <dsegan@gmx.net>
+2003-10-06  Danilo ?†egan  <dsegan@gmx.net>
 
 	* POTFILES.in: Added new files, removed nonexisting file.
 
@@ -1217,7 +1221,7 @@
 
 	* pl.po: Updated Polish translation.
 
-2003-09-10  Danilo ≈†egan  <dsegan@gmx.net>
+2003-09-10  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1332,7 +1336,7 @@
 
 	* ko.po: Updated Korean translation.
 
-2003-08-23  Danilo ≈†egan  <dsegan@gmx.net>
+2003-08-23  Danilo ?†egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1340,7 +1344,7 @@
 
 	* nl.po: Dutch translation updated by Reinout van Schouwen.
 
-2003-08-20  Sam√∫el J√≥n Gunnarsson  <sammi@techattack.nu>
+2003-08-20  Sam?∫el J?≥n Gunnarsson  <sammi@techattack.nu>
 
 	* is.po: Updated Icelandic translation
 	
@@ -1387,7 +1391,7 @@
 
 	* cy.po: Updated Welsh translation.
 
-2003-08-12  Danilo ≈†egan  <dsegan@gmx.net>
+2003-08-12  Danilo ?†egan  <dsegan@gmx.net>
 
 	* be.po: Updated Belarusian translation by Ales Nyakhaychyk
 	<nab@mail.by>. 
