--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-26  Padraig O'Briain  <padraig.obriain@sun.com>
+
+	* libnautilus-private/nautilus-icon-container.c (keyboard_arrow_key):
+	Allow right and down arrow move selected icon when all icons are 
+	selected Fixes bug #140827.
+
 2004-04-22  Martin Wehner  <martin.wehner@epost.de>
 
 	* libnautilus-private/nautilus-icon-factory.c (cache_icon_unref):
