--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-27  Dave Camp  <dave@ximian.com>
+
+	* nautilus.desktop.in:
+	* src/network-scheme.desktop.in: Add OnlyShowIn=GNOME and
+	use 'false' instead of '0' for Terminal=.  Patch from
+	Grzegorz Golawski <grzegol@pld.org.pl>
+
 2004-04-26  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* libnautilus-private/nautilus-icon-container.c (keyboard_arrow_key):
