Added help link id for List Columns tab and corrected the same for
2004-04-28  Kaushal Kumar  <kaushal.kumar@wipro.com>

        * src/nautilus-file-management-properties.c:
        (nautilus_file_management_properties_dialog_response_cb):
        Added help link id for List Columns tab and corrected the same for
        Behavior tab.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-28  Kaushal Kumar  <kaushal.kumar@wipro.com>
+
+	* src/nautilus-file-management-properties.c:
+	(nautilus_file_management_properties_dialog_response_cb):
+	Added help link id for List Columns tab and corrected the same for
+	Behavior tab.
+
 2004-04-27  Dave Camp  <dave@ximian.com>
 
 	* nautilus.desktop.in:
