--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-28  Gil Osher  <dolfin@rpg.org.il>
+
+	* he.po: Updated Hebrew translation.
+
 2004-04-28  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
