If there is no background set, use the theme's fg color for the label.
2004-04-30  Dave Camp  <dave@ximian.com>

        * libnautilus-private/nautilus-icon-container.c: (setup_label_gcs):
        If there is no background set, use the theme's fg color for the
        label.  Patch from Chris Macksey <c_macksey@hotmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-30  Dave Camp  <dave@ximian.com>
+
+	* libnautilus-private/nautilus-icon-container.c: (setup_label_gcs):
+	If there is no background set, use the theme's fg color for the
+	label.  Patch from Chris Macksey <c_macksey@hotmail.com>
+	
 2004-04-28  Dave Camp  <dave@ximian.com>
 
 	* libnautilus-private/nautilus-thumbnails.c:
