--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-02  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2004-04-28  Gil Osher  <dolfin@rpg.org.il>
 
 	* he.po: Updated Hebrew translation.
